--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "postcss": "^8",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0"
   }
 }
